--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,8 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <div data-tf-widget="qCaNw2iD" data-tf-opacity="100" data-tf-iframe-props="title=MealPal" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
-    <!--
+   <!-- // <div data-tf-widget="qCaNw2iD" data-tf-opacity="100" data-tf-iframe-props="title=MealPal" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script> -->
+   
+   
+   
+   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
